[project]
name = "cinder"
version = "0.1.0"
description = "API wrapper for Cinder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openapi-python-client>=0.28.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "ruff>=0.1.0",
]

[tools.setuptools]
packages = ["cinder"]

