[project]
name = "cinder"
version = "0.1.0"
description = "Python async API client wrapper for the Cinder API"
readme = "README.md"
requires-python = ">=3.11.13"
authors = [
    {name = "Rover TSO team", email = "tso@rover.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/roverdotcom/cinder"
Repository = "https://github.com/roverdotcom/cinder"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "ruff>=0.1.0",
  "datamodel-code-generator>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

