[metadata]
name = cinder
version = 0.2.0
description = API wrapper for Cinder
long_description = file: README.md
long_description_content_type = text/markdown
author =
author_email =
url =
license =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.32.5

[options.packages.find]
exclude =
    tests*
    .venv*

[options.entry_points]
console_scripts =
    cinder = main:main
